force-app/main/task05-LeadAss/objects/Postal_Code_Assignment__c/Postal_Code_Assignment__c.object-meta.xml
<CustomObject>
    <label>Postal Code Assignment</label>
    <nameField>
        <displayFormat>PCA-{000000}</displayFormat>
        <label>Postal Code Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Postal Code Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>