force-app/main/task05-LeadAss/objects/Postal_Code_Assignment__c/fields/Pardot_Lead_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Lead_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pardot Lead Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Postal_Code_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>