force-app/main/task05-LeadAss/objects/Postal_Code_Assignment__c/fields/Pardot_Lead_Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Lead_Assignee_Name__c</fullName>
    <label>Pardot Lead Assignee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>